[project]
name = "polybot"
version = "0.1.0"
description = "Polymarket BTC 15-min prediction market trading bot"
requires-python = ">=3.12"
dependencies = [
    # Polymarket API
    "py-clob-client>=0.19.0",
    # Data sources
    "websockets>=13.0",
    "python-socks[asyncio]>=2.4.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # ML/RL
    "stable-baselines3>=2.2.1",
    "gymnasium>=0.29.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    # Web API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "rich>=13.7.0",
    # Web3 (for Chainlink)
    "web3>=6.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
